src/style.css
body {
  background-color: #111016;
  -webkit-background-size: cover;
  background-size: cover;
  overflow-x: hidden;
  margin: 0;
  /* padding-right: 20px; */
}

.container {
  padding: 0 20px;
  padding-right: 20px;
}

/* @media (max-width: 480px) {

  body {
    overflow-x: hidden;
    user-scalable: none;
  }

  .container {
    padding: 0;
  }
}

@media (min-width: 481px) {
  
  body {
    overflow-x: hidden;
    user-scalable: none;
  }
} */

/* Nav-Bar */

#nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 10px;
  z-index: 999;
  position: sticky;
  top: 0;
  left: 0;
}

ul#nav {
  margin: -8px -1em;
  margin-bottom: 3em;
  padding: 20px 2em;
  background-image: linear-gradient(to left, #ccf381, #92ce22);
  /* background-color: #ccf381; */
}

#nav li {
  display: inline;
  list-style: none;
  padding: 0 20px;
  margin-right: 10px;
  cursor: grab;
}

ul#nav li a {
  text-decoration: none;
  font-size: 20px;
  padding: 10px 0;
  color: #111016;
  font-weight: bold;
  transition: 0.5s ease;
}

ul#nav li a:hover {
  color: #080305;
  border-bottom: 5px solid rgb(10, 7, 2);
}

.right-nav {
  display: flex;
  align-items: center;
}

.right-nav select {
  border-radius: 4px;
}

/* .right-nav select:hover {
  border-color: #50C878;
  background-color: #50C878;
} */
/*Logo*/

/*Search Bar*/

#searchbar {
  text-decoration: none;
  font-size: 20px;
  padding: 10px 0;
  color: #111016;
  font-weight: bold;
  transition: 0.5s ease;
  margin-right: 10px;
  display: flex;
  align-items: center;
}

input {
  color: #ccf381;
  background-color: #111016;
  font-weight: bold;
  border-radius: 7px;
  border-color: rgb(249, 221, 168);
  padding: 3px;
  margin-right: 1em;
  margin-left: 1em;
}

input:hover {
  color: #111016;
  background-color: #eee;
  border-radius: 7px;
  padding: 3px;
}

#searchbar input[type="search"] {
  width: 200px;
}

/* Responsive Navbar */
@media (max-width: 768px) {
  #nav {
    flex-wrap: wrap;
    display: flex;
    justify-content: center;
    align-items: center;
  }

  #nav li {
    flex-basis: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
  }

  .right-nav {
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  #searchbar {
    flex-basis: 100%;
    margin-bottom: 10px;
    display: flex;
    flex-direction: column;
  }

  #searchbar input[type="search"] {
    width: 100%;
  }
}

@media (max-width: 992px) {
  #nav {
    flex-wrap: wrap;
    display: flex;
    justify-content: center;
    align-items: center;
  }

  .right-nav {
    display: flex;
    flex-direction: column;
    align-items: center;
  }
  #nav li {
    flex-basis: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
  }

  #searchbar {
    flex-basis: 100%;
    margin-bottom: 10px;
    display: flex;
    flex-direction: column;
  }

  #searchbar input[type="search"] {
    width: 100%;
  }
}

@media (max-width: 1284px) {
  #nav {
    flex-wrap: wrap;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }
  .right-nav {
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  #nav li {
    flex-basis: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
  }

  #searchbar {
    flex-basis: 100%;
    margin-bottom: 10px;
    display: flex;
    flex-direction: column;
  }

  #searchbar input[type="search"] {
    width: 100%;
  }
}

/*Dropdown Menu */

.dropbtn {
  padding: 16px;
  font-size: 16px;
  border: none;
}

#nav .dropdown-menu {
  display: none;
  list-style-type: none;
  margin: 0;
  padding: 0;
  position: absolute;
  min-width: 160px;
  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
  z-index: 1;
}

.dropdown-menu li {
  padding: 0 10px;
}

.dropdown-menu a {
  color: #333;
  text-decoration: none;
  padding: 12px 16px;
  text-decoration: none;
  display: block;
}

.dropdown-menu li:hover {
  background-color: #eee;
}

.nav-links li:hover .dropdown-menu {
  display: block;
}

* {
  box-sizing: border-box;
}

/* Slideshow container */
.slideshow-container {
  max-width: 100%;
  position: relative;
  margin: auto;
  overflow: hidden;
}

/* Hide the images by default */
.mySlides {
  display: none;
}

/* Fading animation */
.fade {
  animation: fade 1.5s;
}

@keyframes fade {
  from {
    opacity: 0.4;
  }
  to {
    opacity: 1;
  }
}

/* The dots/bullets/indicators */
.dot {
  cursor: pointer;
  height: 5px;
  width: 40px;
  margin: 0 5px;
  background-color: #bbb;
  display: inline-block;
  transition: background-color 0.3s ease;
}

.dot.active {
  background-color: #717171;
}

.active,
.dot:hover {
  background-color: #717171;
}

/* Responsive styles */
@media screen and (max-width: 768px) {
  ul#nav {
    flex-direction: column;
    align-items: center;
  }

  #searchbar {
    margin-top: 1em;
  }

  .dropdown-menu {
    position: relative;
  }

  .dropdown-menu li {
    padding: 10px;
  }

  .prev,
  .next {
    padding: 8px;
    font-size: 16px;
  }

  .text,
  .numbertext {
    font-size: 12px;
    padding: 6px 8px;
  }
}

/*Card*/
#card {
  text-align: center;
}

#card .card-body {
  display: grid;
  /* grid-template-columns: repeat(5, minmax(250px, 1fr)); */
  grid-gap: 5px;
  margin: 0 auto;
  padding-top: 20px;
  flex-wrap: wrap;
  padding-left: 10px;
  padding-right: 10px;
}

@media (min-width: 1200px) {
  #card .card-body {
    grid-template-columns: repeat(5, minmax(250px, 1fr));
  }
}

@media (max-width: 1199px) {
  #card .card-body {
    grid-template-columns: repeat(4, minmax(250px, 1fr));
  }
}

@media (max-width: 991px) {
  #card .card-body {
    grid-template-columns: repeat(3, minmax(250px, 1fr));
  }
}

@media (max-width: 767px) {
  #card .card-body {
    grid-template-columns: repeat(2, minmax(250px, 1fr));
  }
}

/* Responsive card */
@media (max-width: 480px) {
  body {
    overflow-x: hidden;
    position: sticky;
  }

  #card .card-body {
    display: grid;
    grid-template-columns: repeat(2, minmax(0, 1fr));
    padding: 10px;
    margin-left: 0;
    grid-gap: 5px;
  }

  #card .body {
    width: 100%;
    min-width: 0;
  }
}

@media (orientation: landscape) and (max-height: 480px) {
  #card .card-body {
    display: grid;
    grid-template-columns: repeat(3, minmax(0, 1fr));
    padding: 5px;
    margin: 0 auto;
    max-width: 100%;
    box-sizing: border-box;
    grid-gap: 5px;
  }

  #card .body {
    width: 100%;
    min-width: 0;
  }
}

@media (orientation: landscape) and (max-width: 568px) {
  #card .card-body {
    display: grid;
    grid-template-columns: repeat(2, minmax(0, 1fr));
    padding: 5px;
    margin: 0 auto;
    max-width: 100%;
    box-sizing: border-box;
    grid-gap: 5px;
  }

  #card .body {
    width: 100%;
    min-width: 0;
  }
}

@media (orientation: landscape) and (max-width: 800px) {
  #card .card-body {
    display: grid;
    grid-template-columns: repeat(2, minmax(0, 1fr));
    padding: 5px;
    margin: 0 auto;
    max-width: 100%;
    box-sizing: border-box;
    grid-gap: 5px;
  }

  #card .body {
    width: 100%;
    min-width: 0;
  }
}

#card h2 {
  color: #ccf381;
}

#card .body {
  width: 100%;
  min-width: 250px;
  padding: 10px 12px;
  border: 2.5px solid #50c878;
  background-color: #ccf381;
  border-radius: 20px;
  cursor: pointer;
  box-shadow: 20px 20px 30px rgba(255, 255, 255, 0.02);
  margin: 15px 0;
  transition: 0.2s ease;
  position: relative;
}

@media (max-width: 480px) {
  #card .body {
    min-width: 100%;
  }
}

#card .body:hover {
  box-shadow: 20px 20px 30px #50c878;
  background-color: #ccf381;
  transform: scale(1.1);
  z-index: 2;
}

#card .body img {
  width: 100%;
  border-radius: 20px;
}

#card .body .desc {
  text-align: start;
  padding: 10px 0;
  width: 100%;
}

/* Card Text */
#card .body .desc span {
  color: red;
  font-size: 15px;
}

#card .body .desc h3 {
  padding-top: 7px;
  color: #111016;
}

#card .body .desc h4 {
  font-size: 15px;
  font-weight: 700;
}

#card .body .desc h4:hover {
  color: black;
  border-bottom: 3px solid;
  width: 62%;
  transition: 0.05s ease;
}

.lds-container {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 25em;
}

.lds-ring {
  display: inline-block;
  position: relative;
  width: 80px;
  height: 80px;
}
.lds-ring div {
  box-sizing: border-box;
  display: block;
  position: absolute;
  width: 64px;
  height: 64px;
  margin: 8px;
  border: 8px solid #ccf381;
  border-radius: 50%;
  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
  border-color: #ccf381 transparent transparent transparent;
}

.lds-ring div:nth-child(1) {
  animation-delay: -0.45s;
}

.lds-ring div:nth-child(2) {
  animation-delay: -0.3s;
}

.lds-ring div:nth-child(3) {
  animation-delay: -0.15s;
}

@keyframes lds-ring {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

/* Overflow CSS */
/* ::-webkit-scrollbar {
  width: 10px;
  overflow-y: scroll;
  -webkit-overflow-scrolling: touch;
} */

/* Track */
/* ::-webkit-scrollbar-track {
  -webkit-box-shadow: inset 0 0 6px #111016; 
  -webkit-border-radius: 10px;
  border-radius: 10px;
} */

/* Handle */
::-webkit-scrollbar-thumb {
  -webkit-border-radius: 10px;
  border-radius: 10px;
  background: #50c878;
  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
}
::-webkit-scrollbar-thumb:window-inactive {
  background: #50c878;
}

.container-notfound {
  display: flex;
  justify-content: center;
  /* align-items: center; */
  /* height: 100vh; */
  /* margin: 0; */
}

.notfound {
  margin-top: 2em;
  border-radius: 10px;
  margin-bottom: 2em;
  max-width: 50%;
  max-height: 50%;
  box-shadow: 10px 10px 30px #50c878;
}

h4.Movie-Info {
  color: #2F4858;
}

h4.Movie-Info {
  text-decoration: none;
  position: relative;
}

h4.Movie-Info:after {
  position: absolute;
  content: "";
  height: 2px;
  bottom: -4px;
  margin: 0 auto;
  left: 0;
  right: 0;
  width: 50%;
  background: #236B7B;

  -o-transition: 0.5s;
  -ms-transition: 0.5s;
  -moz-transition: 0.5s;
  -webkit-transition: 0.5s;
  transition: 0.5s;
}

h4.Movie-Info:hover {
  color: #005C7C;
}

h4.Movie-Info:hover:after {
  width: 80%;
}

